[package]
name = "within"
version = "0.1.1"
license = "MIT"
readme = "README.md"
authors = ["texhnolyze <joegriepen@gmail.com>"]
repository = "https://github.com/texhnolyze/within"
homepage = "https://github.com/texhnolyze/within"
edition = "2018"

[dependencies]
clap = "2.33.0"
rayon = "1.0.3"
ansi_term = "0.11.0"

[[bin]]
name = "within"
path = "src/main.rs"
